package edu.fiuba.algo3.modelo;

import edu.fiuba.algo3.modelo.Vehiculos.Vehiculo;

public interface Accionable {

    void accionar(Vehiculo vehiculo);

}
