@startuml
'https://plantuml.com/class-diagram

class Gps{
    + empezarJuego()
}

class Jugador{
    - nombre

    + moverArriba()
    + moverAbajo()
}

abstract Vehiculo{
    - movimientos
    + moverArriba()
    + moverAbajo()
    + cambiar()
}

interface Accionable{
    +Accionar(Vehiculo)
}

class Moto{
    + moverArriba()
    + moverAbajo()
    + cambiar()
}
class Auto{
    + moverArriba()
    + moverAbajo()
    + cambiar()
}

class 4x4{
    + moverArriba()
    + moverAbajo()
    + cambiar()
}

class Ciudad{
    + generarMatriz()
    + colocarObjetos()
    + moverVehiculoArriba()
    + moverVehiculoAbajo()
}

class Posicion{
    - x
    - y
    + incrementarX()
    + decrementarY()
}

interface Sorpresa{
    + sorprender(Vehiculo);
}

class Favorable{
    + sorprender(Vehiculo)
    + accionar(Vehiculo)
}

class Desfavorable{
    + sorprender(Vehiculo)
    + accionar(Vehiculo)
}

class CambioVehiculo{
    + sorprender(Vehiculo)
    + accionar(Vehiculo)
}

interface Obstaculo{
    + sumarMovimientos(Vehiculo)
}

class Pozo{
    + sumarMovimientos(Vehiculo)
     + accionar(Vehiculo)
}

class Piquete{
    + sumarMovimientos(Vehiculo)
    + accionar(Vehiculo)
}

class ControlPolicial{
    + sumarMovimientos(Vehiculo)

}


Moto ..|> Vehiculo
Auto ..|> Vehiculo
4x4 ..|> Vehiculo
Gps --> Jugador
Gps --> Ciudad
Vehiculo --> Posicion
Pozo ..|> Obstaculo

Piquete ..|> Obstaculo

ControlPolicial ..|> Obstaculo

Grilla "1" --> "*" Accionable
Ciudad --> Vehiculo
Ciudad --> Grilla
Favorable ..|> Sorpresa

Desfavorable ..|> Sorpresa

CambioVehiculo ..|> Sorpresa


Sorpresa ..|> Accionable
Obstaculo ..|> Accionable


@enduml